[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs/
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[pep8]
ignore = E221, E722, W504, E501

[pycodestyle]
ignore = E221, E722, W504, E501

[flake8]
ignore = E221, E722, W504, E501
exclude =
    .eggs/,
    .git/,
    __pycache__/,
    debian/,
    docs/,
    build/,
    dist/,
    intelmq/tests/

[codespell]
skip = *.csv,*.data,./docs/_build,.eggs,.git,testfile.txt,dga.txt
ignore-words-list = crypted,ba,nwe,ether

[metadata]
name = intelmq
description = IntelMQ is a solution for IT security teams for collecting and processing security feeds using a message queuing protocol.
author = IntelMQ Community
maintainer = Wagner Sebastian
maintainer_email = wagner@cert.at
url = https://github.com/certtools/intelmq/
license =  AGPL-3.0-only
license_file = LICENSE
